force-app/main/default/objects/Research_Personnel__c/Research_Personnel__c.object-meta.xml
<CustomObject>
    <label>Ethics Research Personnel</label>
    <nameField>
        <displayFormat>ERP-{000000000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ethics Research Personnel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>