force-app/main/default/objects/Research_Personnel__c/fields/Contact_Researcher__c.field-meta.xml
<CustomField>
    <fullName>Contact_Researcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact/Researcher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Research Personnel</relationshipLabel>
    <relationshipName>Ethics_Research_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>