force-app/main/default/objects/Research_Personnel__c/fields/Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Flag__c</fullName>
    <label>Duplicate Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>