force-app/main/default/objects/Research_Personnel__c/fields/Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Request__c</fullName>
    <label>Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipLabel>Ethics Research Personnel</relationshipLabel>
    <relationshipName>Ethics_Research_Personnel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>