force-app/main/default/objects/Research_Personnel__c/fields/Ethics_Request_Identification__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Request_Identification__c</fullName>
    <label>Ethics Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>