force-app/main/default/objects/Research_Personnel__c/fields/Research_Personnel_Counter__c.field-meta.xml
<CustomField>
    <fullName>Research_Personnel_Counter__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Research Personnel Counter</label>
    <type>AutoNumber</type>
</CustomField>