force-app/main/default/objects/Research_Personnel__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Co-Investigator</fullName>
            </value>
            <value>
                <fullName>Co-ordinating Principal Investigator (Multiple Sites Only)</fullName>
            </value>
            <value>
                <fullName>Student Investigator</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>